# 42s

./: .gitignore  README.md
libftprintf/: CMakeLists.txt  Makefile  ft_printf.c  main  main.c  test_case.c
libftprintf/bonus_srcs/: ft_check_formats_bonus.c  ft_init_format_bonus.c  ft_isdigit_bonus.c  ft_lstnew_bonus.c  ft_make_hexstr_bonus.c  ft_print_char_bonus.c  ft_print_hex_lower_bonus.c  ft_print_hex_upper_bonus.c  ft_print_percent_bonus.c  ft_print_str_bonus.c  ft_print_width_bonus.c  ft_printf_bonus.c  ft_putchar_fd_bonus.c  ft_putstr_fd_bonus.c
libftprintf/format_srcs/: ft_check_formats.c  ft_formatting.c  ft_init_format.c  ft_print_format.c
libftprintf/includes/: printft.h  printft_bonus.h
libftprintf/srcs/: ft_lstclear.c  ft_make_hexstr.c  ft_memset.c  ft_print_addr.c  ft_print_char.c  ft_print_format.c  ft_print_hex_lower.c  ft_print_hex_upper.c  ft_print_int.c  ft_print_str.c  ft_print_width.c  ft_print_zero.c  ft_putchar.c  ft_putchar_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strlen.c
printf/: CMakeLists.txt  Makefile  a.out  main.c  test
printf/bonus_srcs/: ft_check_formats_bonus.c  ft_check_wr_err_bonus.c  ft_err_bonus.c  ft_init_format_bonus.c  ft_intlen_bonus.c  ft_isdigit_bonus.c  ft_itoa_bonus.c  ft_lstclear_bonus.c  ft_lstnew_bonus.c  ft_make_hexstr_bonus.c  ft_print_addr_bonus.c  ft_print_char_bonus.c  ft_print_format_bonus.c  ft_print_hex_bonus.c  ft_print_hex_lower_bonus.c  ft_print_hex_upper_bonus.c  ft_print_int_bonus.c  ft_print_percent_bonus.c  ft_print_str_bonus.c  ft_print_width_bonus.c  ft_print_zero_bonus.c  ft_printf_bonus.c  ft_putchar_fd_bonus.c  ft_putstr_fd_bonus.c  ft_strlen_bonus.c  ft_uitoa_bonus.c
printf/includes/: ft_printf.h  ft_printf_bonus.h
printf/srcs/: ft_check_formats.c  ft_check_wr_err.c  ft_err.c  ft_init_format.c  ft_intlen.c  ft_isdigit.c  ft_itoa.c  ft_lstclear.c  ft_lstnew.c  ft_make_hexstr.c  ft_memset.c  ft_print_addr.c  ft_print_char.c  ft_print_format.c  ft_print_hex.c  ft_print_hex_lower.c  ft_print_hex_upper.c  ft_print_int.c  ft_print_percent.c  ft_print_str.c  ft_print_width.c  ft_print_zero.c  ft_printf.c  ft_putchar_fd.c  ft_putstr_fd.c  ft_strlen.c  ft_uitoa.c
push_swap/: CMakeLists.txt  Makefile  a.txt  check_util.c  empty_sort.c  empty_sort_4.c  ft_atoi.c  ft_split.c  merge_sort.c  partition.c  push_swap.c  push_swap.h  sort_less_3.c  stack_oper.c  utility.c
push_swap/bonus/: checker_bonus.c  chk_util_bonus.c  ft_atoi_bonus.c  ft_split_bonus.c  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils_bonus.c  merge_sort_bonus.c  push_swap_bonus.h  stack_oper_bonus.c  utility_bonus.c
push_swap/checker/: checker_bonus.c  chk_util_bonus.c  ft_split_bonus.c  merge_sort_bonus.c  push_swap_bonus.h  utility_bonus.c
push_swap/main/: check_util.c  empty_sort_4.c  ft_atoi.c  merge_sort.c  push_swap.c  push_swap.h  sort_less_3.c  utility.c
so_long/: CMakeLists.txt  Makefile  error.c  main.c  main_bonus.c  map.ber  medium_map.ber  so_long  so_long.c  so_long.h  so_long_bonus.h
so_long/bonus/: alloc_img2_bonus.c  alloc_img_bonus.c  core_bonus.h  frame_update_bonus.c  init_game_bonus.c  key_input_bonus.c  render_bonus.c
so_long/core/: alloc_img.c  alloc_img2.c  core.h  frame_update.c  init_game.c  key_input.c  render.c
so_long/gnl/: get_next_line.c  get_next_line.h  get_next_line_utils.c
so_long/imgs/: Mideval RPG Torch Sprite with Animations 1.0.rar
so_long/lib_printf/: Makefile
so_long/map/: check_map.c  create_map.c  init_map.c  map.h
so_long/map_bonus/: check_map_bonus.c  create_map_bonus.c  init_map_bonus.c  map_bonus.h
so_long/mlx/: mlx_image.swiftsourceinfo  mlx_init.swiftsourceinfo  mlx_int.h  mlx_window.swiftsourceinfo
so_long/utils/: ft_itoa.c  str_utils.c  str_utils_bonus.c  utils.h
(+198 files in other folders)
